--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
 		"@vueform/multiselect": "^2.5.8",
 		"@vueform/slider": "^2.1.7",
 		"auth0-js": "^9.20.1",
+		"axios": "^1.3.4",
 		"chart.js": "^4.2.0",
 		"core-js": "^3.8.3",
 		"dayjs": "^1.11.7",
