--- a/node/package.json
+++ b/node/package.json
@@ -30,6 +30,7 @@
 		"multer-s3-transform": "^2.10.3",
 		"node-fetch": "^3.2.1",
 		"npm": "^9.4.1",
+		"openai": "^3.2.1",
 		"request": "^2.88.2",
 		"sharp": "^0.30.3",
 		"twilio": "^3.84.0"
