--- a/vue/package.json
+++ b/vue/package.json
@@ -22,21 +22,28 @@
 		"jwt-decode": "^3.1.2",
 		"material-design-colors": "^1.0.2",
 		"moment": "^2.29.4",
+		"papaparse": "^5.4.1",
 		"serve-static": "^1.15.0",
 		"vue": "^3.2.13",
 		"vue-chartjs": "^5.2.0",
 		"vue-cookies": "^1.8.2",
+		"vue-i18n": "^9.3.0-beta.17",
 		"vue-router": "^4.1.6",
-		"vuex": "^4.1.0"
+		"vue-tel-input": "^8.1.1",
+		"vuex": "^4.1.0",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
 		"@babel/eslint-parser": "^7.12.16",
+		"@faker-js/faker": "^7.6.0",
 		"@vue/cli-plugin-babel": "~5.0.0",
 		"@vue/cli-plugin-eslint": "~5.0.0",
 		"@vue/cli-service": "~5.0.0",
 		"eslint": "^7.32.0",
 		"eslint-plugin-vue": "^8.0.3",
+		"install": "^0.13.0",
+		"npm": "^9.6.5",
 		"sass": "^1.57.1",
 		"sass-loader": "^10.4.1"
 	},
