--- a/vue/package.json
+++ b/vue/package.json
@@ -27,6 +27,7 @@
 		"vue": "^3.2.13",
 		"vue-chartjs": "^5.2.0",
 		"vue-cookies": "^1.8.2",
+		"vue-google-autocomplete": "^1.1.4",
 		"vue-i18n": "^9.3.0-beta.17",
 		"vue-router": "^4.1.6",
 		"vue-tel-input": "^8.1.1",
