--- a/vue/package.json
+++ b/vue/package.json
@@ -32,6 +32,7 @@
 		"vue-router": "^4.1.6",
 		"vue-tel-input": "^8.1.1",
 		"vuex": "^4.1.0",
+		"vuex-persistedstate": "^4.1.0",
 		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
