--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.0.2",
 		"@auth0/auth0-vue": "^2.0.0",
+		"@popperjs/core": "^2.11.8",
 		"@vueform/multiselect": "^2.5.8",
 		"@vueform/slider": "^2.1.7",
 		"auth0-js": "^9.20.1",
@@ -44,6 +45,7 @@
 		"@vue/cli-service": "~5.0.0",
 		"eslint": "^7.32.0",
 		"eslint-plugin-vue": "^8.0.3",
+		"html-webpack-plugin": "^5.6.0",
 		"install": "^0.13.0",
 		"npm": "^9.6.5",
 		"sass": "^1.57.1",
