--- a/vue/package.json
+++ b/vue/package.json
@@ -9,45 +9,46 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
-		"@auth0/auth0-spa-js": "^2.0.2",
-		"@auth0/auth0-vue": "^2.0.0",
-		"@vueform/multiselect": "^2.5.8",
-		"@vueform/slider": "^2.1.7",
-		"auth0-js": "^9.20.1",
-		"axios": "^1.3.4",
-		"chart.js": "^4.2.0",
-		"core-js": "^3.8.3",
-		"dayjs": "^1.11.7",
-		"express": "^4.18.2",
-		"jwt-decode": "^3.1.2",
+		"@auth0/auth0-spa-js": "^2.1.3",
+		"@auth0/auth0-vue": "^2.3.3",
+		"@faker-js/faker": "^8.4.1",
+		"@popperjs/core": "^2.11.8",
+		"@vueform/multiselect": "^2.6.8",
+		"@vueform/slider": "^2.1.10",
+		"auth0-js": "^9.26.1",
+		"axios": "^1.7.2",
+		"chart.js": "^4.4.3",
+		"core-js": "^3.37.1",
+		"dayjs": "^1.11.11",
+		"express": "^4.19.2",
+		"jwt-decode": "^4.0.0",
 		"material-design-colors": "^1.0.2",
-		"moment": "^2.29.4",
+		"moment": "^2.30.1",
 		"papaparse": "^5.4.1",
 		"serve-static": "^1.15.0",
-		"vue": "^3.2.13",
-		"vue-chartjs": "^5.2.0",
-		"vue-cookies": "^1.8.2",
+		"vue": "^3.4.31",
+		"vue-chartjs": "^5.3.1",
+		"vue-cookies": "^1.8.4",
 		"vue-google-autocomplete": "^1.1.4",
-		"vue-i18n": "^9.3.0-beta.17",
-		"vue-router": "^4.1.6",
-		"vue-tel-input": "^8.1.1",
+		"vue-i18n": "^9.13.1",
+		"vue-router": "^4.4.0",
+		"vue-tel-input": "^9.1.4",
 		"vuex": "^4.1.0",
 		"vuex-persistedstate": "^4.1.0",
 		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.16",
-		"@babel/eslint-parser": "^7.12.16",
-		"@faker-js/faker": "^7.6.0",
-		"@vue/cli-plugin-babel": "~5.0.0",
-		"@vue/cli-plugin-eslint": "~5.0.0",
-		"@vue/cli-service": "~5.0.0",
-		"eslint": "^7.32.0",
-		"eslint-plugin-vue": "^8.0.3",
+		"@babel/core": "^7.24.7",
+		"@babel/eslint-parser": "^7.24.7",
+		"@vue/cli-plugin-babel": "^5.0.8",
+		"@vue/cli-plugin-eslint": "^5.0.8",
+		"@vue/cli-service": "^5.0.8",
+		"eslint": "^8.57.0",
+		"eslint-plugin-vue": "^9.27.0",
 		"install": "^0.13.0",
-		"npm": "^9.6.5",
-		"sass": "^1.57.1",
-		"sass-loader": "^10.4.1"
+		"npm": "^10.8.1",
+		"sass": "^1.77.6",
+		"sass-loader": "^14.2.1"
 	},
 	"eslintConfig": {
 		"root": true,
