--- a/vue/package.json
+++ b/vue/package.json
@@ -39,12 +39,13 @@
 	"devDependencies": {
 		"@babel/core": "^7.24.7",
 		"@babel/eslint-parser": "^7.24.7",
-        "@faker-js/faker": "^8.4.1",
+		"@faker-js/faker": "^8.4.1",
 		"@vue/cli-plugin-babel": "^5.0.8",
 		"@vue/cli-plugin-eslint": "^5.0.8",
 		"@vue/cli-service": "^5.0.8",
 		"eslint": "^8.57.0",
 		"eslint-plugin-vue": "^9.27.0",
+		"html-webpack-plugin": "^5.6.0",
 		"install": "^0.13.0",
 		"npm": "^10.8.1",
 		"sass": "^1.77.6",
