--- a/vue/package.json
+++ b/vue/package.json
@@ -43,13 +43,16 @@
 		"@vue/cli-plugin-babel": "^5.0.8",
 		"@vue/cli-plugin-eslint": "^5.0.8",
 		"@vue/cli-service": "^5.0.8",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-plugin-vue": "^9.27.0",
 		"html-webpack-plugin": "^5.6.0",
 		"install": "^0.13.0",
 		"npm": "^10.8.1",
+		"postcss": "^8.4.39",
 		"sass": "^1.77.6",
-		"sass-loader": "^14.2.1"
+		"sass-loader": "^14.2.1",
+		"tailwindcss": "^3.4.6"
 	},
 	"eslintConfig": {
 		"root": true,
