--- a/vue/package.json
+++ b/vue/package.json
@@ -50,6 +50,8 @@
 		"install": "^0.13.0",
 		"npm": "^10.8.1",
 		"postcss": "^8.4.39",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"sass": "^1.77.6",
 		"sass-loader": "^14.2.1",
 		"tailwindcss": "^3.4.6"
