--- a/vue/package.json
+++ b/vue/package.json
@@ -24,6 +24,7 @@
 		"material-design-colors": "^1.0.2",
 		"moment": "^2.30.1",
 		"papaparse": "^5.4.1",
+		"pinia": "^2.2.0",
 		"serve-static": "^1.15.0",
 		"vue": "^3.4.31",
 		"vue-chartjs": "^5.3.1",
@@ -43,13 +44,18 @@
 		"@vue/cli-plugin-babel": "^5.0.8",
 		"@vue/cli-plugin-eslint": "^5.0.8",
 		"@vue/cli-service": "^5.0.8",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-plugin-vue": "^9.27.0",
 		"html-webpack-plugin": "^5.6.0",
 		"install": "^0.13.0",
 		"npm": "^10.8.1",
+		"postcss": "^8.4.40",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"sass": "^1.77.6",
-		"sass-loader": "^14.2.1"
+		"sass-loader": "^14.2.1",
+		"tailwindcss": "^3.4.7"
 	},
 	"eslintConfig": {
 		"root": true,
