feat: migrate vue cli to vite

--- a/vue/package.json
+++ b/vue/package.json
@@ -1,80 +1,48 @@
 {
-	"name": "switchit-vue",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"start": "node index.js",
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
-	},
-	"dependencies": {
-		"@auth0/auth0-spa-js": "^2.1.3",
-		"@auth0/auth0-vue": "^2.3.3",
-		"@popperjs/core": "^2.11.8",
-		"@vueform/multiselect": "^2.6.8",
-		"@vueform/slider": "^2.1.10",
-		"auth0-js": "^9.26.1",
-		"axios": "^1.7.2",
-		"chart.js": "^4.4.3",
-		"core-js": "^3.37.1",
-		"dayjs": "^1.11.11",
-		"express": "^4.19.2",
-		"jwt-decode": "^4.0.0",
-		"material-design-colors": "^1.0.2",
-		"moment": "^2.30.1",
-		"papaparse": "^5.4.1",
-		"pinia": "^2.2.0",
-		"serve-static": "^1.15.0",
-		"vue": "^3.4.31",
-		"vue-chartjs": "^5.3.1",
-		"vue-cookies": "^1.8.4",
-		"vue-google-autocomplete": "^1.1.4",
-		"vue-i18n": "^9.13.1",
-		"vue-router": "^4.4.0",
-		"vue-tel-input": "^9.1.4",
-		"vuex": "^4.1.0",
-		"vuex-persistedstate": "^4.1.0",
-		"xlsx": "^0.18.5"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.24.7",
-		"@babel/eslint-parser": "^7.24.7",
-		"@faker-js/faker": "^8.4.1",
-		"@vue/cli-plugin-babel": "^5.0.8",
-		"@vue/cli-plugin-eslint": "^5.0.8",
-		"@vue/cli-service": "^5.0.8",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-plugin-vue": "^9.27.0",
-		"html-webpack-plugin": "^5.6.0",
-		"install": "^0.13.0",
-		"npm": "^10.8.1",
-		"postcss": "^8.4.40",
-		"prettier": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"sass": "^1.77.6",
-		"sass-loader": "^14.2.1",
-		"tailwindcss": "^3.4.7"
-	},
-	"eslintConfig": {
-		"root": true,
-		"env": {
-			"node": true
-		},
-		"extends": [
-			"plugin:vue/vue3-essential",
-			"eslint:recommended"
-		],
-		"parserOptions": {
-			"parser": "@babel/eslint-parser"
-		},
-		"rules": {}
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not dead",
-		"not ie 11"
-	]
+  "name": "switchit-vue",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@auth0/auth0-vue": "^2.3.3",
+    "@popperjs/core": "^2.11.8",
+    "@vueform/multiselect": "^2.6.9",
+    "@vueform/slider": "^2.1.10",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "dayjs": "^1.11.12",
+    "jwt-decode": "^4.0.0",
+    "material-design-colors": "^1.0.2",
+    "papaparse": "^5.4.1",
+    "pinia": "^2.2.0",
+    "vue": "^3.4.31",
+    "vue-chartjs": "^5.3.1",
+    "vue-cookies": "^1.8.4",
+    "vue-google-autocomplete": "^1.1.4",
+    "vue-i18n": "^9.13.1",
+    "vue-router": "^4.4.0",
+    "vue-tel-input": "^9.1.4",
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.8.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "sass": "^1.77.8",
+    "tailwindcss": "^3.4.7",
+    "vite": "^5.3.4"
+  }
 }
