--- a/vue/.gitignore
+++ b/vue/.gitignore
@@ -1,26 +1,27 @@
-.DS_Store
-node_modules
-/dist
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
+node_modules
+dist
+dist-ssr
+*.local
 
 # local env files
 .env
 .env.local
 .env.*.local
-.env.development
-.env.production
-
-src/pages/backups
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
-.vscode
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
